# telegram-bot-video-downloader

./: Dockerfile  logger.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-image.yml
configs/: config.py
downloader/: __init__.py  downloader.py  facebook.py  tiktok.py  youtube.py
